--- a/styles.css
+++ b/styles.css
@@ -34,4 +34,5 @@ header {
     justify-content: space-around;
     padding: 25px;
     background-color: var(--pistachio);
+    box-shadow: -5px 5px 2rem var(--apricot), 5px 5px 2rem var(--apricot);
 }
